ELS Code/main/default/objects/Sources__c/Sources__c.object-meta.xml
<CustomObject>
    <description>Custom object used to store sources of contact.</description>
    <label>Sources</label>
    <nameField>
        <displayFormat>SRC-{00000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>