ELS Code/main/default/objects/Sources__c/fields/Create_Activities_And_Interests__c.field-meta.xml
<CustomField>
    <fullName>Create_Activities_And_Interests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Activities And Interests</label>
    <type>Checkbox</type>
</CustomField>