ELS Code/main/default/objects/Sources__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <label>Form Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>