ELS Code/main/default/objects/Sources__c/fields/Joomla_Type__c.field-meta.xml
<CustomField>
    <fullName>Joomla_Type__c</fullName>
    <label>Joomla Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>