ELS Code/main/default/objects/Sources__c/fields/Origination__c.field-meta.xml
<CustomField>
    <fullName>Origination__c</fullName>
    <label>Origination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>