ELS Code/main/default/objects/Sources__c/fields/Origination_Page_Description__c.field-meta.xml
<CustomField>
    <fullName>Origination_Page_Description__c</fullName>
    <label>Origination Page Description</label>
    <type>TextArea</type>
</CustomField>