ELS Code/main/default/objects/Sources__c/fields/Paid_Online__c.field-meta.xml
<CustomField>
    <fullName>Paid_Online__c</fullName>
    <label>Paid Online</label>
    <length>255</length>
    <type>Text</type>
</CustomField>