ELS Code/main/default/objects/Sources__c/fields/Property_Brand__c.field-meta.xml
<CustomField>
    <fullName>Property_Brand__c</fullName>
    <label>Property Brand</label>
    <type>TextArea</type>
</CustomField>