ELS Code/main/default/objects/Sources__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <label>Property Name</label>
    <type>TextArea</type>
</CustomField>