ELS Code/main/default/objects/Sources__c/fields/Reservations_what_channel__c.field-meta.xml
<CustomField>
    <fullName>Reservations_what_channel__c</fullName>
    <label>Reservations what channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>