ELS Code/main/default/objects/Sources__c/fields/Resort_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Resort_Interested_In__c</fullName>
    <label>Resort Interested In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>