ELS Code/main/default/objects/Sources__c/fields/Source_Count__c.field-meta.xml
<CustomField>
    <fullName>Source_Count__c</fullName>
    <description>get the numbers in a string format</description>
    <formula>&apos;SRC-&apos;  &amp;  RIGHT(&apos;0000000000&apos; &amp; Text(Counter__c), 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Count</label>
    <type>Text</type>
</CustomField>