ELS Code/main/default/objects/Sources__c/fields/Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_ID__c</fullName>
    <description>This field will be used as external ID for sources.</description>
    <externalId>true</externalId>
    <label>Source ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>