ELS Code/main/default/objects/Sources__c/fields/Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Sub_type__c</fullName>
    <label>Sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Contact Inquiry</fullName>
            </value>
            <value>
                <fullName>Directory Request - Hard copy</fullName>
            </value>
            <value>
                <fullName>Directory Request - Soft Copy</fullName>
            </value>
            <value>
                <fullName>Event RSVP</fullName>
            </value>
            <value>
                <fullName>General Info</fullName>
            </value>
            <value>
                <fullName>Media Inquiry</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Promotional</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Sweepstakes</fullName>
            </value>
            <value>
                <fullName>Tradeshow/Rally</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Pandora</fullName>
            </value>
            <value>
                <fullName>Yahoo</fullName>
            </value>
            <value>
                <fullName>Atlantic City</fullName>
            </value>
            <value>
                <fullName>Blue Crick RV &amp; Truck</fullName>
            </value>
            <value>
                <fullName>Boat N RV Superstore</fullName>
            </value>
            <value>
                <fullName>Boston RV</fullName>
            </value>
            <value>
                <fullName>Central Valley Sportsmens Show</fullName>
            </value>
            <value>
                <fullName>Charlotte RV</fullName>
            </value>
            <value>
                <fullName>Dallas Summer boat show</fullName>
            </value>
            <value>
                <fullName>Greensboro RV</fullName>
            </value>
            <value>
                <fullName>Harrisburg</fullName>
            </value>
            <value>
                <fullName>Holiday World</fullName>
            </value>
            <value>
                <fullName>La Mesa RV Cebter</fullName>
            </value>
            <value>
                <fullName>Quartzsite RV</fullName>
            </value>
            <value>
                <fullName>Raleigh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>