ELS Code/main/default/objects/Sources__c/fields/Tiny_House__c.field-meta.xml
<CustomField>
    <fullName>Tiny_House__c</fullName>
    <description>Tiny House Submissions</description>
    <label>Tiny House</label>
    <length>23</length>
    <type>Text</type>
</CustomField>