ELS Code/main/default/objects/Sources__c/fields/Trade_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show_Name__c</fullName>
    <label>Trade Show Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>