ELS Code/main/default/objects/Sources__c/fields/Tradeshow_end_date__c.field-meta.xml
<CustomField>
    <fullName>Tradeshow_end_date__c</fullName>
    <label>Tradeshow end date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>