ELS Code/main/default/objects/Sources__c/fields/Tradeshow_start_date__c.field-meta.xml
<CustomField>
    <fullName>Tradeshow_start_date__c</fullName>
    <label>Tradeshow start date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>