ELS Code/main/default/objects/Sources__c/fields/Trial_Programs_Program_name__c.field-meta.xml
<CustomField>
    <fullName>Trial_Programs_Program_name__c</fullName>
    <label>Trial Programs Program name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>