ELS Code/main/default/objects/Sources__c/fields/Web_Form_Location__c.field-meta.xml
<CustomField>
    <fullName>Web_Form_Location__c</fullName>
    <label>Web Form Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>