ELS Code/main/default/objects/Sources__c/fields/Web_Form_Website__c.field-meta.xml
<CustomField>
    <fullName>Web_Form_Website__c</fullName>
    <label>Web Form Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>