ELS Code/main/default/objects/Sources__c/validationRules/Source_ID_Required_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_ID_Required_Field_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>( NOT(ISNEW()) &amp;&amp; ISBLANK(Source_ID__c) ) || 
( NOT(ISNEW()) &amp;&amp; PRIORVALUE(Source_ID__c ) != Source_ID__c )</errorConditionFormula>
    <errorMessage>Source ID cannot be updated.</errorMessage>
</ValidationRule>