ELS Code/main/default/objects/Sources__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Source_ID__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Description__c</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Counter__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Create_Activities_And_Interests__c</columns>
    <columns>Joomla_Type__c</columns>
    <columns>Form_Location__c</columns>
    <columns>Form_Type__c</columns>
    <columns>Form_Url__c</columns>
    <columns>Origination__c</columns>
    <columns>Origination_Page_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>