ELS Code/main/default/objects/Sources__c/listViews/CORG.listView-meta.xml
<ListView>
    <fullName>CORG</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Source_ID__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Sub_type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Type__c</field>
        <operation>equals</operation>
        <value>Co-registration</value>
    </filters>
    <label>CORG</label>
</ListView>