ELS Code/main/default/objects/Sources__c/listViews/Paid_Online.listView-meta.xml
<ListView>
    <fullName>Paid_Online</fullName>
    <columns>NAME</columns>
    <columns>Source_Type__c</columns>
    <columns>Source_ID__c</columns>
    <columns>Sub_type__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Type__c</field>
        <operation>equals</operation>
        <value>Paid Online</value>
    </filters>
    <label>Paid Online</label>
</ListView>