ELS Code/main/default/objects/Sources__c/listViews/social_media.listView-meta.xml
<ListView>
    <fullName>social_media</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Source_ID__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Sub_type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Type__c</field>
        <operation>equals</operation>
        <value>Social Media</value>
    </filters>
    <label>Social Media</label>
</ListView>