ELS Code/main/default/objects/Sources__c/listViews/Tradeshow.listView-meta.xml
<ListView>
    <fullName>Tradeshow</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Source_ID__c</columns>
    <columns>Sub_type__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Partner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Type__c</field>
        <operation>equals</operation>
        <value>TradeShow</value>
    </filters>
    <label>Tradeshow</label>
</ListView>